Found and fix strange bug (in last commit) which was causing page render to jank and flicker after scrolling to a particular section of page.

--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -406,7 +406,7 @@ $top-nav-box-height: 2.25rem;
   .MuiDrawer-paper {
     width: 75%;
     overflow-x: hidden;
-    background: linear-gradient(to bottom, $theme-primary-v5, $theme-primary-v3);
+    background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
     max-width: 22rem;
   }
 }
